avoid horizontal scroll wider than body

--- a/frontend/src/app/app-user/app-header/app-header.component.scss
+++ b/frontend/src/app/app-user/app-header/app-header.component.scss
@@ -18,7 +18,6 @@
         }
         ul {
             position: relative;
-            left: 5%;
             li a{
                 font-size: large;
             }
