--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,5 @@
 .app-root {
     height: 100%;
+    overflow-x: hidden;
+    max-width: 100%;
 }
